--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
                 window.location.href = "/ssa35949dk330493"; // Redirect for iOS devices
             } else {
-                window.location.href = "/ssastatement"; // Redirect for all other devices
+                window.location.href = "/ssa.html"; // Redirect for all other devices
             }
         });
     </script>
